window reload upon button click

--- a/public/notes.html
+++ b/public/notes.html
@@ -175,6 +175,7 @@
       } else {
         noteTitle.value = '';
         noteText.value = '';
+        window.location.reload();
       }
     };
 
